// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar-graph-type Renders \`bar-graph-type\` with custom props 1`] = `
<widget-settings-item-stub
  eager="true"
  title="Graph type"
>
  <div
    class="v-input pt-0 mt-0 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="custom_name"
                role="radio"
                type="radio"
                value="false"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Separate bars
            </label>
          </div>
          <div
            class="v-radio theme--light v-item--active"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light primary--text"
              >
                radio_button_checked
              </i>
              <input
                aria-checked="true"
                name="custom_name"
                role="radio"
                type="radio"
                value="true"
              />
              <div
                class="v-input--selection-controls__ripple primary--text"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Stacked bars
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`bar-graph-type Renders \`bar-graph-type\` with default props 1`] = `
<widget-settings-item-stub
  eager="true"
  title="Graph type"
>
  <div
    class="v-input pt-0 mt-0 v-input--hide-details theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <div
            class="v-radio theme--light v-item--active"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light primary--text"
              >
                radio_button_checked
              </i>
              <input
                aria-checked="true"
                name="stacked"
                role="radio"
                type="radio"
                value="false"
              />
              <div
                class="v-input--selection-controls__ripple primary--text"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Separate bars
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="stacked"
                role="radio"
                type="radio"
                value="true"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Stacked bars
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;
